--- a/tauri/src-tauri/Cargo.toml
+++ b/tauri/src-tauri/Cargo.toml
@@ -23,7 +23,7 @@ tokio = { version = "1", features = ["full"] }
 hound = "3.5"
 base64 = "0.22"
 cpal = "0.15"
-symphonia = { version = "0.5", features = ["wav", "pcm"] }
+symphonia = { version = "0.5", features = ["all"] }
 scopeguard = "1.2.0"
 
 [target.'cfg(target_os = "macos")'.dependencies]
