Enhance release workflow and add radio group component
- Updated the release workflow to include a new configuration for the Ubuntu 22.04 platform without TTS bundled.
- Added the @radix-ui/react-radio-group dependency to package.json.
- Implemented a new RadioGroup component for better UI handling of radio inputs.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -132,10 +132,10 @@ jobs:
             python-version: "3.12"
             backend: "pytorch"
           # Linux - No TTS bundled, providers downloaded separately
-          # - platform: 'ubuntu-22.04'
-          #   args: ''
-          #   python-version: '3.12'
-          #   backend: 'none'
+          - platform: "ubuntu-22.04"
+            args: ""
+            python-version: "3.12"
+            backend: "none"
           # Windows - No TTS bundled, providers downloaded separately
           - platform: "windows-latest"
             args: ""
