Update Windows configuration in release workflow to use PyTorch backend
- Changed the backend setting for Windows from "none" to "pytorch" to ensure compatibility with bundled PyTorch CPU providers.
- Updated comments for clarity regarding the Windows setup.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -148,11 +148,11 @@ jobs:
             args: ""
             python-version: "3.12"
             backend: "none"
-          # Windows - No TTS bundled, providers downloaded separately
+          # Windows - PyTorch CPU bundled (works out of the box)
           - platform: "windows-latest"
             args: ""
             python-version: "3.12"
-            backend: "none"
+            backend: "pytorch"
 
     runs-on: ${{ matrix.platform }}
 
