--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,6 +64,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pyinstaller
+          # Install CPU-only torch on Linux to avoid CUDA bloat
+          if [ "${{ matrix.platform }}" == "ubuntu-22.04" ]; then
+            pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
+          fi
           pip install -r providers/pytorch-cpu/requirements.txt
           pip install -r backend/requirements.txt
 
