--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,8 @@
     "@hookform/resolvers": "^3.9.0",
     "@hugeicons/core-free-icons": "^3.1.1",
     "@hugeicons/react": "^1.1.4",
+    "@iconify-json/svg-spinners": "^1.2.4",
+    "@iconify/react": "^6.0.2",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
